--- a/app/views/tmpl/viewinterface.html
+++ b/app/views/tmpl/viewinterface.html
@@ -12,10 +12,7 @@
                                     <a href="index.html"><i class="fa fa-home"></i> mDash</a>
                                 </li>
                                 <li>
-                                    <a href="#">Interface</a>
-                                </li>
-                                <li>
-                                    <a href="">Interface Name</a>
+                                    <a href="">{{interfaceName}}</a>
                                 </li>
                             </ul>
                             <div class="page-toolbar ng-scope"> <a ui-sref="app.addinterface" href="javascript:;" class="btn btn-lightred no-border ng-isolate-scope" > <i class="fa fa-edit"></i>&nbsp;&nbsp;<span class="ng-binding">Edit</span> </a> </div>
