--- a/app/views/tmpl/interfacelist.html
+++ b/app/views/tmpl/interfacelist.html
@@ -12,7 +12,7 @@
                                     <a href="index.html"><i class="fa fa-home"></i> mDash</a>
                                 </li>
                                 <li>
-                                    <a href="#">Interface</a>
+                                    <a href="#">Interface List</a>
                                 </li>
 
                             </ul>
