Bread crumb changes on View Job page
Committed code for Breadcrumb changes on View Job page

--- a/app/views/tmpl/viewflow.html
+++ b/app/views/tmpl/viewflow.html
@@ -522,13 +522,10 @@ border-radius:15px;
           <a ui-sref="app.dashboard"><i class="fa fa-home"></i> mDash</a>
         </li>
         <li>
-          <a href="javascript:;">Interface</a>
+          <a ui-sref="app.">{{Interface_Name}}</a>
         </li>
         <li>
-          <a ui-sref="app.">Interface Name</a>
-        </li>
-        <li>
-          <a ui-sref="app.">Flow Name</a>
+          <a ui-sref="app.">{{Flow_Name}}</a>
         </li>
       </ul>
 
