--- a/app/views/tmpl/viewflow.html
+++ b/app/views/tmpl/viewflow.html
@@ -714,8 +714,52 @@ border-radius:15px;
   </div> 
  
   <div class="col-sm-6">
-    <button type="button" class="btn btn-darkgray mb-10 col-sm-12">Rollback</button>
+    <button type="button" class="btn btn-darkgray mb-10 col-sm-12" ng-click="rollbackdetails()">Rollback</button>
   </div>
+	<div id="id02" class="w3-modal" ng-show="buildmodal1">
+	
+    <div class="w3-modal-content">
+      <div class="w3-container" >
+        <span ng-click="close1()" class="w3-button w3-display-topright">&times;</span><br>
+		<br>
+			<div class="form-group col-sm-12">
+			
+			<div id="Config_ServiceDiv" >
+					<label for="iibhost">IIB Host</label>
+					 <input class="form-group col-sm-12" id="iibhost" type="text" ng-model="iibhost"></input> 
+					<!-- <select ng-model="iibhost" ng-options="x for x in iibhost">
+					</select> -->
+				</div>
+
+				<div id="svnrepoDiv" >
+					<label for="IIBNode">IIB Node</label>
+					<input class="form-group col-sm-12" id="IIBNode" type="text" ng-model="IIBNode"></input>
+				</div>
+
+				<div id="projectnameDiv">
+					<label for="executionGroup">Execution Group</label>
+					<input class="form-group col-sm-12" id="executionGroup" type="text" ng-model="executionGroup"></input> 
+					<!-- <select ng-model="executionGroup" ng-options="x for x in execs">
+					</select> -->
+				</div>
+		
+				<div id="messageflownameDiv" >
+					<label for="BrokerName">Broker </label>
+					<input class="form-group col-sm-12" id="BrokerName " type="text" ng-model="BrokerName "></input>
+				</div>
+				
+				<div id="targetDiv">
+					<label for="Target">Target</label>
+					<select ng-model="target" ng-options="x for x in targets">
+					</select>
+				</div>
+			</div>
+			<div class="form-group col-sm-7">
+			<button type="button" class="btn btn-darkgray mb-10 col-sm-6" ng-click="build1()">Rollback</button>
+			</div>
+      </div>
+    </div>
+  </div> 													
 </div>
 </div>
 
