Commented Progress bar text
Commented Progress bar text on ViewJob page

--- a/app/views/tmpl/viewflow.html
+++ b/app/views/tmpl/viewflow.html
@@ -537,10 +537,10 @@ border-radius:15px;
   <div class="pagecontent">
   <section class="tile">
                           <!-- tile header -->
-                          <div class="tile-header dvd dvd-btm">
+                          <!--<div class="tile-header dvd dvd-btm">
                            <center> <h1 class="custom-font"><strong>Progress Bar</h1> </center>
 
-                          </div>
+                          </div>-->
 			
 			
 			 
