--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -22,17 +22,17 @@ text-decoration:none !important;
           </ul>
 		</li>
 	
-		<li ui-sref-active="active"><a ui-sref="app.projects"><fa name="briefcase"></fa> Library</a>
-		  <ul>
+		<li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="briefcase"></fa> Library</a>
+		  <!--<ul>
 			<li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="caret-right"></fa>Library properties</a></li>
-			</ul>
+			</ul>-->
 		</li>
 		
-		<li ui-sref-active="active"><a ui-sref="app.projects"><fa name="briefcase"></fa> Configurations</a>
-		  <ul>
+		<li ui-sref-active="active"><a ui-sref="app.configurationsPage"><fa name="briefcase"></fa> Configurations</a>
+		 <!-- <ul>
 			<li ui-sref-active="active"><a ui-sref="app.configurationsPage"><fa name="caret-right"></fa>Configurations</a></li>
-			</ul>
-			</li>
+			</ul>-->
+		</li>
 		  
         <li ui-sref-active="active"><a ui-sref="app.pages.usermanagement"><fa name="users"></fa> <span>Teams</span></a>
           <ul>
