Live Console Autoscroll, UI changes
Committed code change for Live Console Autoscroll, UI changes

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -22,13 +22,13 @@ text-decoration:none !important;
           </ul>
 		</li>
 	
-		<li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="briefcase"></fa> Library</a>
+		<li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="book"></fa> Library</a>
 		  <!--<ul>
 			<li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="caret-right"></fa>Library properties</a></li>
 			</ul>-->
 		</li>
 		
-		<li ui-sref-active="active"><a ui-sref="app.configurationsPage"><fa name="briefcase"></fa> Configurations</a>
+		<li ui-sref-active="active"><a ui-sref="app.configurationsPage"><fa name="gear"></fa> Configurations</a>
 		 <!-- <ul>
 			<li ui-sref-active="active"><a ui-sref="app.configurationsPage"><fa name="caret-right"></fa>Configurations</a></li>
 			</ul>-->
