--- a/app/views/tmpl/viewinterface.html
+++ b/app/views/tmpl/viewinterface.html
@@ -30,7 +30,7 @@
                         <!-- tile -->
                         <section class="tile" fullscreen="isFullscreen02">
                           <div class="tile-header dvd dvd-btm">
-                          <h1 class="custom-font"><strong>Flows</strong></h1>
+                          <h1 class="custom-font">Flows</h1>
 
                           </div>
                           <!-- tile body -->
@@ -158,7 +158,7 @@
                                     <div easypiechart options="easypiechart.options" percent="easypiechart.percent" class="easypiechart" style="width: 140px; height: 140px;">
                                       <p class="text-uppercase text-elg mt-20 mb-0" style="line-height: 100px;"><strong class="text-white">4/4</strong></p>
                                       <br>
-                                    <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Test</strong> </p>
+                                    <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Dev</strong> </p>
                                     <p class="text-light">v3.2 - April 11th,2017</p>
                                   </div>
                                 </div>
@@ -167,7 +167,7 @@
                                   <div class="col-lg-4 text-center">
                                     <div easypiechart options="easypiechart2.options" percent="easypiechart2.percent" class="easypiechart" style="width: 140px; height: 140px;">
                                       <p class="text-uppercase text-elg mt-20 mb-0" style="line-height: 100px;"><strong class="text-white">3/4</strong></p><br>
-                                      <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Dev</strong> </p>
+                                      <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Test</strong> </p>
                                       <p class="text-light">v4.1 - April 18th,2017</p>
                                     </div>
                                   </div>
@@ -207,7 +207,7 @@
                           <div class="tile-body p-0">
 
                            <div class="tile-header dvd dvd-btm">
-                            <h1 class="custom-font"><strong>Recent</strong> Builds</h1>
+                            <h1 class="custom-font">Recent Builds</h1>
 
                         </div>
 
@@ -264,7 +264,7 @@
                           <div class="tile-body p-0">
 
                             <div class="tile-header dvd dvd-btm">
-                            <h1 class="custom-font"><strong>Invoke</strong> Test</h1>
+                            <h1 class="custom-font">Invoke Test</h1>
 
                         </div>
                              <div class="tile-body ng-scope">
