--- a/app/views/tmpl/dashboard.html
+++ b/app/views/tmpl/dashboard.html
@@ -117,7 +117,7 @@ text-decoration:none !important;
 
         <!-- tile header -->
         <div class="tile-header dvd dvd-btm">
-          <h1 class="custom-font"><strong>Server </strong>Health</h1>
+          <h1 class="custom-font">Server Health</h1>
 
         </div>
         <!-- /tile header -->
@@ -168,7 +168,27 @@ text-decoration:none !important;
 
 
 
+<script>
 
+	function main1(){
+document.getElementById("main1").style.backgroundColor="#f5f5f5";
+document.getElementById("main3").style.backgroundColor="transparent";
+document.getElementById("main2").style.backgroundColor="transparent";
+}
+
+	function main2(){
+document.getElementById("main2").style.backgroundColor="#f5f5f5";
+document.getElementById("main1").style.backgroundColor="transparent";
+document.getElementById("main3").style.backgroundColor="transparent";
+}
+
+	function main3(){
+document.getElementById("main3").style.backgroundColor="#f5f5f5";
+document.getElementById("main1").style.backgroundColor="transparent";
+document.getElementById("main2").style.backgroundColor="transparent";
+}
+
+</script>
 
   <!-- row -->
   <div class="row">
@@ -183,30 +203,21 @@ text-decoration:none !important;
 
         <!-- tile header -->
         <div class="tile-header bg-greensea dvd dvd-btm">
-          <h1 class="custom-font"><strong>Build </strong>History</h1>
+          <h1 class="custom-font">Deployment History</h1>
           <ul class="controls">
-            <li ng-controller="DaterangepickerCtrl">
-              <a href="javascript:;" daterangepicker="rangeOptions" date-begin="startDate" date-end="endDate">
-                <span>{{startDate}} - {{endDate}}</span>&nbsp;&nbsp;<i class="fa fa-angle-down"></i>
-              </a>
-            </li>
-            <li class="dropdown" uib-dropdown on-toggle="toggled(open)">
+		   <li class="dropdown" uib-dropdown on-toggle="toggled(open)">
 
-              <a href uib-dropdown-toggle class="dropdown-toggle settings">Environment <i class="fa fa-angle-down"></i></a>
+              <a href uib-dropdown-toggle class="dropdown-toggle settings"> DEV <i class="fa fa-angle-down"></i></a>
 
               <ul class="dropdown-menu pull-right with-arrow animated littleFadeInUp">
-                 <li>
-                  <a href ng-click="ajaxFaker()">
-                     TEST
+                
+                <li>
+                  <a id="main2" href  ng-click="ajaxFaker()" onclick="main2()">
+                    TEST
                   </a>
                 </li>
                 <li>
-                  <a href  ng-click="ajaxFaker()">
-                    DEV
-                  </a>
-                </li>
-                <li>
-                  <a href  ng-click="isFullscreen01 = !isFullscreen01">
+                  <a id="main3" href  ng-click="ajaxFaker()" onclick="main3()">
                     PROD
                   </a>
                 </li>
@@ -215,6 +226,12 @@ text-decoration:none !important;
               </ul>
 
             </li>
+            <li ng-controller="DaterangepickerCtrl">
+              <a href="javascript:;" daterangepicker="rangeOptions" date-begin="startDate" date-end="endDate">
+                <span>{{startDate}} - {{endDate}}</span>&nbsp;&nbsp;<i class="fa fa-angle-down"></i>
+              </a>
+            </li>
+           
 
           </ul>
         </div>
@@ -277,7 +294,7 @@ text-decoration:none !important;
 
 
               <div class="tile-header dvd dvd-btm">
-                            <h1 class="custom-font"><strong>Recent</strong> Builds</h1>
+                            <h1 class="custom-font">Recent Deployments</h1>
 
                         </div>
               <table class="table table-no-border m-0">
