Live console auto scroll to bottom
Code checked-in for Live console auto scroll to bottom

--- a/app/views/tmpl/viewflow.html
+++ b/app/views/tmpl/viewflow.html
@@ -1,3 +1,4 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 <p id="i">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -499,6 +500,9 @@ ul.checkout-bar li:before {
 width:65% !important;
 border-radius:15px;
 }
+.demo{
+  height:355px;overflow-y:scroll;background-color:#232527;color:#ffffff;padding: 10px 10px;font-family:Inconsolata;bottom:0px;
+}
 </style>
 <div class="page page-timeline">
 
@@ -768,7 +772,7 @@ border-radius:15px;
                             <style>
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
 </style>
-                                <div id="console2" style="height:355px;overflow-y:scroll;background-color:#232527;color:#ffffff;padding: 10px 10px;font-family:Inconsolata;">
+                                <div id="console2" class="demo" style="height:355px;overflow-y:scroll;background-color:#232527;color:#ffffff;padding: 10px 10px;font-family:Inconsolata;">
                                   <font>
 								  
 								 </font>
@@ -858,8 +862,4 @@ border-radius:15px;
                              </script>
  -->
   <!-- /page content -->
-
-
-
-
 </div>
